--- a/src/ds-styles.scss
+++ b/src/ds-styles.scss
@@ -1,22 +1,26 @@
+@import '../node_modules/bootstrap/scss/bootstrap.scss';
+
+// calendar styles
 .react-calendar {
   width: 350px;
   max-width: 100%;
-  background: white;
-  border: 1px solid #a0a096;
-  font-family: Arial, Helvetica, sans-serif;
+  background: $light;
+  border: 1px solid $secondary;
+  //font-family: Arial, Helvetica, sans-serif;
   line-height: 1.125em;
 }
-.react-calendar--doubleView {
-  width: 700px;
-}
-.react-calendar--doubleView .react-calendar__viewContainer {
-  display: flex;
-  margin: -0.5em;
-}
-.react-calendar--doubleView .react-calendar__viewContainer > * {
-  width: 50%;
-  margin: 0.5em;
-}
+// .react-calendar--doubleView {
+//   width: 700px;
+// }
+// .react-calendar--doubleView .react-calendar__viewContainer {
+//   display: flex;
+//   margin: -0.5em;
+// }
+// .react-calendar--doubleView .react-calendar__viewContainer > * {
+//   width: 50%;
+//   margin: 0.5em;
+// }
+
 .react-calendar,
 .react-calendar *,
 .react-calendar *:before,
@@ -44,10 +48,10 @@
 }
 .react-calendar__navigation button:enabled:hover,
 .react-calendar__navigation button:enabled:focus {
-  background-color: #e6e6e6;
+  background-color: $light;
 }
 .react-calendar__navigation button[disabled] {
-  background-color: #f0f0f0;
+  background-color: $light;
 }
 .react-calendar__month-view__weekdays {
   text-align: center;
@@ -67,10 +71,10 @@
   padding: calc(0.75em / 0.75) calc(0.5em / 0.75);
 }
 .react-calendar__month-view__days__day--weekend {
-  color: #d10000;
+  color: $red-500;
 }
 .react-calendar__month-view__days__day--neighboringMonth {
-  color: #757575;
+  color: $dark;
 }
 .react-calendar__year-view .react-calendar__tile,
 .react-calendar__decade-view .react-calendar__tile,
@@ -84,34 +88,102 @@
   background: none;
 }
 .react-calendar__tile:disabled {
-  background-color: #f0f0f0;
+  background-color: $gray-400;
 }
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
-  background-color: #e6e6e6;
+  background-color: $gray-500;
 }
 .react-calendar__tile--now {
-  background: #ffff76;
+  background: $yellow-200;
 }
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
-  background: #ffffa9;
+  background: $yellow-100;
 }
-.react-calendar__tile--hasActive {
-  background: #76baff;
-}
-.react-calendar__tile--hasActive:enabled:hover,
-.react-calendar__tile--hasActive:enabled:focus {
-  background: #a9d4ff;
-}
+// .react-calendar__tile--hasActive {
+//   background: #76baff;
+// }
+// .react-calendar__tile--hasActive:enabled:hover,
+// .react-calendar__tile--hasActive:enabled:focus {
+//   background: #a9d4ff;
+// }
 .react-calendar__tile--active {
-  background: #006edc;
-  color: white;
+  background: $blue-400;
+  color: $white;
+}
+.react-calendar__tile--active:hover {
+  background: $blue-300;
 }
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-  background: #1087ff;
+  background: $blue-300;
 }
 .react-calendar--selectRange .react-calendar__tile--hover {
-  background-color: #e6e6e6;
+  background-color: $blue-300;
+}
+
+// graphing styles
+.recharts-bar-rectangle {
+  fill: $success;
+}
+
+.pie-slice-0 {
+  fill: $primary;
+}
+
+.pie-slice-1 {
+  fill: $success;
+}
+
+.pie-slice-2 {
+  fill: $danger;
+}
+
+.pie-slice-3 {
+  fill: $warning;
+}
+
+.pie-slice-4 {
+  fill: $info;
+}
+
+.pie-slice-5 {
+  fill: $dark;
+}
+
+.pie-slice-6 {
+  fill: $secondary;
+}
+
+/* random styles from various posts/articles */
+
+// .recharts-cartesian-axis-tick {
+//   text {
+//     tspan {
+//       font-family: sans-serif;
+//       color: $danger;
+//     }
+//   }
+// }
+
+// .recharts-cartesian-grid-horizontal {
+//   line {
+//     stroke-dasharray: 2, 2;
+//     stroke: $secondary;
+//   }
+// }
+
+.recharts-cartesian-axis-tick-value {
+  tspan {
+    fill: $secondary;
+    letter-spacing: 0.03em;
+  }
+}
+
+.recharts-pie-label-text {
+  tspan {
+    fill: $secondary;
+    letter-spacing: 0.03em;
+  }
 }
