added a style specifically for note taking

--- a/apps/ds-ui/src/ds-styles.scss
+++ b/apps/ds-ui/src/ds-styles.scss
@@ -23,6 +23,10 @@ body {
   padding-bottom: 62px;
 }
 
+.small-caps-style {
+  font-variant: small-caps;
+}
+
 // calendar styles
 .react-calendar {
   width: 350px;
