--- a/apps/ds-ui/src/styles/ds-styles.scss
+++ b/apps/ds-ui/src/styles/ds-styles.scss
@@ -36,6 +36,32 @@ body {
   font-family: 'Merriweather', serif;
 }
 
+.page-main-container {
+  @extend .m-0;
+  @extend .p-1;
+}
+
+.page-main-content-col {
+  @extend .col-12;
+  @extend .col-lg-9;
+  @extend .col-xxl-10;
+}
+
+.page-sidebar-container-col {
+  @extend .order-last;
+  @extend .col-12;
+  @extend .order-sm-last;
+  @extend .col-sm-12;
+  @extend .order-md-last;
+  @extend .col-sm-12;
+  @extend .order-lg-first;
+  @extend .col-lg-3;
+  @extend .order-xl-first;
+  @extend .col-xl-3;
+  @extend .order-xxl-first;
+  @extend .col-xxl-2;
+}
+
 .sidebar-header-div {
   @extend .bg-primary;
   @extend .bg-opacity-25;
