refactored prev/next buttons and styling thereof

--- a/apps/ds-ui/src/styles/_do.scss
+++ b/apps/ds-ui/src/styles/_do.scss
@@ -14,5 +14,13 @@
     span {
       @extend .user-select-none;
     }
+
+    .active-scroller {
+      cursor: pointer;
+    }
+
+    .inactive-scroller {
+      @extend .text-muted;
+    }
   }
 }
