--- a/apps/ds-ui/src/styles/ds-styles.scss
+++ b/apps/ds-ui/src/styles/ds-styles.scss
@@ -53,7 +53,7 @@ body {
   @extend .order-sm-last;
   @extend .col-sm-12;
   @extend .order-md-last;
-  @extend .col-sm-12;
+  @extend .col-md-12;
   @extend .order-lg-first;
   @extend .col-lg-3;
   @extend .order-xl-first;
