added pagination functioanlity

--- a/apps/ds-ui/src/styles/ds-styles.scss
+++ b/apps/ds-ui/src/styles/ds-styles.scss
@@ -142,6 +142,11 @@ footer {
   @extend .text-decoration-none;
 }
 
+.pagination-div {
+  @extend .mt-2;
+  @extend .w-100;
+}
+
 @import './read';
 @import './calendar';
 @import './graphs';
