--- a/apps/ds-ui/src/styles/_markdown.scss
+++ b/apps/ds-ui/src/styles/_markdown.scss
@@ -6,6 +6,12 @@
   .md-editor-preview {
     @extend .d-grid;
     @extend .gap-2;
+
+    button {
+      @extend .btn-sm;
+      @extend .btn-secondary;
+    }
+
     .md-editor-preview-view {
       @extend .bg-light;
       @extend .mx-1;
