--- a/apps/ds-ui/src/styles/_home.scss
+++ b/apps/ds-ui/src/styles/_home.scss
@@ -1,8 +1,30 @@
+.home-viz-container {
+  @extend .col-12;
+
+  .container-row {
+    @extend .row-cols-1;
+    @extend .row-cols-md-2;
+    @extend .row-cols-xxl-3;
+  }
+}
+
+.home-graph-sorter-container {
+  @extend .mt-4;
+  @extend .col-12;
+}
+
 .graph-sorter-list {
+  @extend .row-cols-1;
+  @extend .row-cols-sm-2;
+  @extend .row-cols-md-3;
+  @extend .row-cols-xl-4;
+  @extend .row-cols-xxl-5;
+
   div {
     @extend .bg-light;
     @extend .border;
     @extend .p-2;
+    @extend .text-center;
 
     input {
       @extend .mx-1;
