--- a/apps/ds-ui/src/styles/_plans.scss
+++ b/apps/ds-ui/src/styles/_plans.scss
@@ -11,21 +11,35 @@
 .plan-summary-view {
   @extend .shadow;
 
-  .version-col {
+  .apoc-col {
     @extend .col-1;
+  }
+
+  .description-col {
+    @extend .col-11;
+  }
+
+  .version-col {
+    @extend .col-2;
   }
 
   .num-weeks-col {
     @extend .col-2;
   }
+
   .percent-complete-col {
-    @extend .col-9;
+    @extend .col-8;
   }
+
   .button-row {
     @extend .mt-3;
 
     .edit-col {
       @extend .col-4;
+
+      button {
+        @extend .btn-primary;
+      }
     }
 
     .join-col {
@@ -34,12 +48,129 @@
 
     .delete-col {
       @extend .col-4;
+
+      button {
+        @extend .btn-danger;
+      }
     }
+  }
+}
+
+.plan-summary-view-admin {
+  @extend .alert-primary;
+
+  span.badge {
+    @extend .bg-primary;
+  }
+
+  div.progress-bar {
+    @extend .bg-primary;
+  }
+}
+
+.plan-summary-view-user {
+  @extend .alert-info;
+
+  span.badge {
+    @extend .bg-info;
+  }
+
+  div.progress-bar {
+    @extend .bg-info;
   }
 }
 
 .plan-edit-details {
   @extend .col-10;
+
+  .main-items {
+    @extend .bg-light;
+    @extend .p-3;
+
+    .warning-message {
+      @extend .alert-warning;
+    }
+
+    .name-col {
+      @extend .col-12;
+      @extend .col-md-6;
+      @extend .col-xl-5;
+      @extend .mb-2;
+    }
+
+    .weeks-col {
+      @extend .col-12;
+      @extend .col-md-6;
+      @extend .col-xl-3;
+      @extend .mb-2;
+    }
+
+    .version-col {
+      @extend .col-12;
+      @extend .col-md-6;
+      @extend .col-xl-2;
+      @extend .mb-2;
+    }
+
+    .weekends-col {
+      @extend .col-12;
+      @extend .col-md-6;
+      @extend .col-xl-2;
+      @extend .mb-2;
+    }
+
+    .description-label-col {
+      @extend .col-12;
+      @extend .col-md-2;
+    }
+
+    .description-col {
+      @extend .col-12;
+      @extend .col-md-10;
+      @extend .col-lg-6;
+      @extend .col-xl-8;
+    }
+
+    .admin-col {
+      @extend .col-12;
+      @extend .col-lg-4;
+      @extend .col-xl-2;
+    }
+  }
+
+  .days-container {
+    @extend .p-5;
+    @extend .mt-3;
+
+    .osis-controls {
+      label {
+        @extend .h4;
+      }
+
+      button {
+        @extend .btn;
+        @extend .btn-outline-warning;
+      }
+    }
+
+    .week-header {
+      @extend .h3;
+      @extend .mt-3;
+    }
+
+    .day-view {
+      button {
+        @extend .btn;
+        @extend .btn-outline-secondary;
+      }
+
+      .verse-indicator {
+        @extend .fw-bold;
+        @extend .ms-2;
+        @extend .text-muted;
+      }
+    }
+  }
 }
 
 .plan-edit-sidebar {
@@ -47,6 +178,23 @@
 
   .sidebar-content {
     @extend .sticky-top;
+
+    div {
+      @extend .d-grid;
+      @extend .gap-2;
+    }
+
+    .save-button {
+      @extend .btn-primary;
+    }
+
+    .submit-button {
+      @extend .btn-primary;
+    }
+
+    .reset-button {
+      @extend .btn-danger;
+    }
   }
 }
 
@@ -58,3 +206,31 @@
   @extend .fw-bold;
 }
 
+.passage-modal {
+  .passage-modal-body {
+    div.row {
+      @extend .mb-3;
+    }
+
+    .save-button {
+      @extend .btn-primary;
+    }
+
+    .update-label {
+      @extend .mb-2;
+    }
+  }
+}
+
+.join-leave-button {
+  @extend .btn-primary;
+}
+
+.plan-page-new-plan-row {
+  @extend .mb-3;
+
+  a {
+    @extend .btn;
+    @extend .btn-primary;
+  }
+}
