updated styles for small caps for note taking

--- a/apps/ds-ui/src/styles/ds-styles.scss
+++ b/apps/ds-ui/src/styles/ds-styles.scss
@@ -28,8 +28,14 @@ body {
   padding-bottom: 62px;
 }
 
-.small-caps-style {
+.sc {
   font-variant: small-caps;
+  text-transform: lowercase;
+  display: inline-block;
+}
+
+.sc::first-letter {
+  text-transform: uppercase;
 }
 
 .reading-text {
