additional small cap styles for MD fields

--- a/apps/ds-ui/src/styles/ds-styles.scss
+++ b/apps/ds-ui/src/styles/ds-styles.scss
@@ -38,6 +38,16 @@ body {
   text-transform: uppercase;
 }
 
+.sc2 {
+  font-variant: small-caps;
+  text-transform: lowercase;
+  display: inline-block;
+}
+
+.small-caps-style {
+  font-variant: small-caps;
+}
+
 .reading-text {
   font-family: 'Merriweather', serif;
 }
