MINOR added styles for bible links

--- a/apps/ds-ui/src/styles/ds-styles.scss
+++ b/apps/ds-ui/src/styles/ds-styles.scss
@@ -52,6 +52,16 @@ body {
   font-family: 'Merriweather', serif;
 }
 
+.biblelink::after {
+  content: '\271E';
+}
+.esvlink::after {
+  content: ' (ESV)\271E';
+}
+.nivlink::after {
+  content: ' (NIV)\271E';
+}
+
 .page-main-container {
   @extend .m-0;
   @extend .p-1;
