added some bootstrap styles to the MDEditor toolbar

--- a/apps/ds-ui/src/styles/_markdown.scss
+++ b/apps/ds-ui/src/styles/_markdown.scss
@@ -1,3 +1,11 @@
 .wmde-markdown {
   font-family: 'Merriweather', serif !important;
 }
+
+.w-md-editor-toolbar {
+  @extend .btn-toolbar;
+
+  ul {
+    @extend .btn-group;
+  }
+}
