MINOR changed the colours, with commented out alternate versions

--- a/apps/ds-ui/src/styles/ds-styles.scss
+++ b/apps/ds-ui/src/styles/ds-styles.scss
@@ -3,6 +3,66 @@
 
 //overrides of BS variables here
 
+//OPTION 1
+// $white: #ffffff;
+
+// $light: #e2d7cf;
+// $dark: #111223;
+// $primary: #533215;
+// $secondary: #913c88;
+// $info: #db5c25;
+// $success: #4c9414;
+// $warning: #feba39;
+// $danger: #e90b5e;
+
+// OPTION 2
+// $white: #ffffff;
+
+// $light: #d5d8d5;
+// $dark: #171616;
+// $primary: #533a56;
+// $secondary: #ce542d;
+// $info: #f64c6e;
+// $success: #1aa068;
+// $warning: #dacd1b;
+// $danger: #e6340c;
+
+// OPTION 3
+// $white: #ffffff;
+
+// $light: #e2d7c8;
+// $dark: #030502;
+// $primary: #2f4831;
+// $secondary: #3f6b90;
+// $info: #e16028;
+// $success: #169d1d;
+// $warning: #f4c119;
+// $danger: #ed0b49;
+
+// OPTION 4
+$white: #ffffff;
+
+$light: #ddd8f9;
+$dark: #100b0b;
+$primary: #2f2f63;
+$secondary: #8759dc;
+$info: #f9a99b;
+$success: #1ca664;
+$warning: #e1cc1c;
+$danger: #f0230d;
+
+// OPTION 5
+// $white: #ffffff;
+
+// $light: #ccecdd;
+// $dark: #221629;
+// $primary: #114b4d;
+// $secondary: #008277;
+// $info: #e50058;
+// $success: #009c44;
+// $warning: #e9c500;
+// $danger: #f0002e;
+
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 
