removed custom colours and softened alter-content-field

--- a/apps/ds-ui/src/styles/ds-styles.scss
+++ b/apps/ds-ui/src/styles/ds-styles.scss
@@ -28,16 +28,16 @@
 // $danger: #e6340c;
 
 // OPTION 3
-$white: #ffffff;
+// $white: #ffffff;
 
-$light: #e2d7c8;
-$dark: #030502;
-$primary: #2f4831;
-$secondary: #3f6b90;
-$info: #e16028;
-$success: #169d1d;
-$warning: #f4c119;
-$danger: #ed0b49;
+// $light: #e2d7c8;
+// $dark: #030502;
+// $primary: #2f4831;
+// $secondary: #3f6b90;
+// $info: #e16028;
+// $success: #169d1d;
+// $warning: #f4c119;
+// $danger: #ed0b49;
 
 // OPTION 4
 // $white: #ffffff;
@@ -120,7 +120,8 @@ strong {
 .alter-content-field {
   @extend .text-dark;
   @extend .border-dark;
-  @extend .bg-warning;
+  // @extend .bg-warning;
+  background-color: $orange-200;
   @extend .bg-gradient;
   @extend .fw-bold;
 }
