first working version of the marked -- but still painfully slow for large text

--- a/apps/ds-ui/src/styles/_markdown.scss
+++ b/apps/ds-ui/src/styles/_markdown.scss
@@ -22,4 +22,17 @@
     @extend .table-striped;
     @extend .table-hover;
   }
+
+  code {
+    @extend .monospace-text;
+  }
+
+  blockquote {
+    @extend .blockquote;
+    @extend .border-start;
+    @extend .border-3;
+    @extend .ps-2;
+    @extend .border-secondary;
+    font-size: 1em;
+  }
 }
